<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_on_secondary">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbarsubmit_size"
        android:background="@color/design_default_color_on_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contextClickable="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ImageView
                android:id="@+id/header_image"
                android:layout_width="334dp"
                android:layout_height="51dp"
                android:contentDescription="@string/header_image"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toTopOf="@+id/txt_submission"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_submission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alfa_slab_one"
                android:text="@string/project_submission"
                android:textColor="@color/gold_yellow"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="@+id/toolbar_submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/toolbarsubmit_size"
                android:scrollbarSize="4dp"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <EditText
            android:id="@+id/txt_last_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:background="@drawable/custom_text_background"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/padding_left"
            android:paddingRight="@dimen/padding_right"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_first_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txt_first_name"
            app:layout_constraintTop_toTopOf="@+id/txt_first_name" />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:autofillHints=""
            android:background="@drawable/custom_text_background"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/padding_left"
            android:paddingRight="@dimen/padding_right"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/txt_github_link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_first_name" />

        <EditText
            android:id="@+id/txt_first_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:background="@drawable/custom_text_background"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:paddingLeft="@dimen/padding_left"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/txt_email"
            app:layout_constraintEnd_toStartOf="@+id/txt_last_name"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txt_github_link"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:autofillHints=""
            android:background="@drawable/custom_text_background"
            android:ems="10"
            android:hint="@string/github_link"
            android:inputType="textPersonName"
            android:paddingLeft="@dimen/padding_left"
            android:paddingRight="@dimen/padding_right"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_email" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_submit"
            android:text="@string/submit_button_label"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_github_link" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>